Updates to descriptions and restrictions

--- a/massdriver.yaml
+++ b/massdriver.yaml
@@ -31,7 +31,8 @@ params:
   properties:
     mysql_version:
       title: Version
-      description: The version of MySQL to use. The version can be upgraded, but not downgraded.
+      description: The version of MySQL to use. The version cannot be changed.
+      $md.immutable: true
       type: string
       default: "5.7"
       enum:
@@ -39,8 +40,9 @@ params:
         - "5.7"
     username:
       title: Username
-      description: The administrator login for the MySQL Flexible Server. (Cannot be 'admin', 'root', 'administrator', 'username', 'azure_superuser', 'azure_pg_admin', 'guest', or 'public'.)
+      description: The administrator login for the MySQL Flexible Server. Username cannot be changed after creation. (Username cannot be 'admin', 'root', 'administrator', 'username', 'azure_superuser', 'azure_pg_admin', 'guest', or 'public'.)
       type: string
+      $md.immutable: true
       not:
         enum:
           - admin
@@ -98,7 +100,7 @@ params:
           const: MO_Standard_E64ds_v4
     storage_gb:
       title: Storage
-      description: The storage you provision is the amount of storage capacity available to your Azure Database for MySQL server.
+      description: The storage you provision is the amount of storage capacity available to your Azure Database for MySQL server. Storage size cannot be scaled down.
       type: integer
       oneOf:
         - title: 20GB
@@ -126,7 +128,7 @@ params:
     cidr:
       title: Subnet CIDR
       type: string
-      description: Specify a /28 CIDR range within your vnet to create subnet for the database
+      description: Specify a /28 CIDR range within your vnet to create subnet for the database. The subnet CIDR cannot be changed after creation.
       $md.immutable: true
       pattern: ^(?:10\.(?:[0-9]|[0-9]{2}|1[0-9][0-9]|2[0-4][0-9]|25[0-5])|172\.(?:1[6-9]|2[0-9]|3[0-1])|192\.168)(?:\.(?:[0-9]|[0-9]{2}|1[0-9][0-9]|2[0-4][0-9]|25[0-5])){2}\/28$
       message:
@@ -140,7 +142,7 @@ params:
       maximum: 35
     high_availability:
       title: Enable High Availability
-      description: Zone redundant high availability deploys a standby replica within the same zone for automatic failover in the event of an outage.
+      description: Zone redundant high availability deploys a standby replica within the same zone for automatic failover in the event of an outage. Burstable compute SKUs do not support high availability.
       type: boolean
       default: false
 
