--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,9 @@ repos:
     rev: v1.74.1
     hooks:
       - id: terraform_fmt
-      - id: terraform_validate
+      # - id: terraform_validate
+      # - id: terraform_docs
+      # - id: terrascan
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.2.0
     hooks:
@@ -46,9 +48,6 @@ repos:
       - id: check-json
       - id: check-yaml
       - id: end-of-file-fixer
-      - id: detect-aws-credentials
-        args:
-          - "--allow-missing-credentials"
       - id: no-commit-to-branch
         args:
           - "-b"
