--- a/massdriver.yaml
+++ b/massdriver.yaml
@@ -1,7 +1,7 @@
 schema: draft-07
 name: "azure-mysql-flexible-server"
 description: "Azure Database for MySQL Flexible Server is a fully managed production-ready database service designed for more granular control and flexibility over database management functions and configuration settings."
-ref: github.com/massdriver-cloud/azure-mysql-flexible-server
+source_url: github.com/massdriver-cloud/azure-mysql-flexible-server
 access: "private"
 type: "bundle"
 
