Adding fancy pointers to UI order

--- a/massdriver.yaml
+++ b/massdriver.yaml
@@ -335,7 +335,7 @@ ui:
         - memory_metric_alert
         - storage_metric_alert
         - '*'
-      cpu_metric_alert:
+      cpu_metric_alert: &monitor_alarm_metric_ui
         ui:order:
           - severity
           - operator
@@ -345,20 +345,6 @@ ui:
           - threshold
           - '*'
       memory_metric_alert:
-        ui:order:
-          - severity
-          - operator
-          - aggregation
-          - frequency
-          - window_size
-          - threshold
-          - '*'
+        <<: *monitor_alarm_metric_ui
       storage_metric_alert:
-        ui:order:
-          - severity
-          - operator
-          - aggregation
-          - frequency
-          - window_size
-          - threshold
-          - '*'
+        <<: *monitor_alarm_metric_ui
